syntax = "proto3";

package game;

option go_package = "github.com/Diaku49/grpc-game-server/pb";

import "api/proto/game.proto";

service GameServer {
    // Player Setup
    rpc CreateUser(CreateUserReq) returns (CreateUserRes);
    rpc JoinGame(JoinGameReq) returns (JoinGameRes);
    // Gameplay
    rpc StartGame(StartGameReq) returns (stream StartGameRes);
    rpc MakeMove(MakeMoveReq) returns (MakeMoveRes);
}

// Enum
enum Directions {
    UP = 0;
    DOWN = 1;
    RIGHT = 2;
    LEFT = 3;
}

enum GameState {
    WAITING_FOR_OTHER_PLAYERS = 0;
    STARTED = 1;
    ENDED = 2;
}

//------------ Player --------------

// Create
message CreateUserReq {
   string name = 1;
   string email = 2;
};

message CreateUserRes {
    string id = 1;
    string message = 2;
}

// Matchmaking

// Join
message JoinGameReq {
    string player_id = 1;
}

message JoinGameRes {
   string game_id = 1;
}

//------------- Gameplay ------------

// Start Game
message StartGameReq {
   string player_id = 1;
}

message StartGameRes {
    GameRoom gameInfo = 1;
}

// Make Move
message MakeMoveReq {
    string player_id = 1;
    Directions direction = 2;
}

message MakeMoveRes {}

//------------- Cleanup ----------------